# legal-rag-benchmark

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/_report/: research_report.md
docs/test_results/: coverage_summary.txt  pytest_output.txt  quality_gates.txt
results/: SUMMARY.md  cuad__bm25__metrics.json  cuad__bm25__runs.jsonl  cuad__dense__metrics.json  cuad__dense__runs.jsonl  cuad__rrf(bm25+dense)__metrics.json  cuad__rrf(bm25+dense)__runs.jsonl
results/_style/: repo.mplstyle
src/legal_rag_benchmark/: cli.py  config.py
src/legal_rag_benchmark/data/: loader.py
src/legal_rag_benchmark/eval/: metrics.py  runner.py
src/legal_rag_benchmark/retrievers/: base.py  bm25.py  dense.py  hybrid.py  rerank.py
tests/: test_hybrid.py  test_loader.py  test_metrics.py  test_retrievers_bm25.py
tests/fixtures/: tiny.docs.jsonl  tiny.queries.jsonl
