[project]
name = "legal-rag-benchmark"
version = "0.1.0"
description = "Hybrid retrieval benchmark over case law and legal contracts."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Akshitha Reddy Lingampally" }]
keywords = ["legal", "rag", "retrieval", "bm25", "benchmark", "ir"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    "datasets>=2.19,<3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0,<4",
    "faiss-cpu>=1.8",
    "numpy>=1.26,<2",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "tqdm>=4.66",
    "typer>=0.12",
    "pydantic>=2.7",
    "loguru>=0.7",
    "pyyaml>=6",
    "tabulate>=0.9",
]

[project.optional-dependencies]
rerank = [
    # cross-encoder is bundled in sentence-transformers; this group exists
    # so the dependency is opt-in for installs that don't need rerank
    "sentence-transformers>=3.0,<4",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
    "types-tqdm",
]

[project.scripts]
lrb = "legal_rag_benchmark.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/legal_rag_benchmark"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # function call in argument defaults (typer uses this everywhere)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # allow assert False

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
ignore_missing_imports = true
exclude = ["build/", "dist/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "slow: tests that download datasets or build large indices",
    "needs_api: tests that require external API access",
]
